cleanup, enable js by default
