# docs/swagger.json
@@ -48,9 +48,9 @@
                     },
                     {
                         "type": "boolean",
-                        "default": false,
-                        "description": "Javascript enabled",
-                        "name": "javaScriptEnabled",
+                        "default": true,
+                        "description": "Enable Javascript",
+                        "name": "javascript",
                         "in": "formData"
                     },
                     {
